changes instagram url

--- a/_config.yml
+++ b/_config.yml
@@ -36,4 +36,4 @@ kuro-ig:		https://www.instagram.com/kurogamiandrea/
 riccardo-ig:		https://www.instagram.com/kinbakuluxuria/
 marta-ig:		https://www.instagram.com/martatenshiko/
 poppy-ig:		https://www.instagram.com/opium.decay/
-benjamin-ig:		https://www.instagram.com/benjamin.kinbaku/
+benjamin-ig:		https://www.instagram.com/rope_yarns/
